# Compressions-Algorithms

./: .gitignore  CMakeLists.txt  CompressionAlgorithms.qmlproject  README.md  header.h  main.c  qmlmodules  qtquickcontrols2.conf
Huffmans-algorithm/: decode.c  decode.h  encode.h  huff.c  huff.h
content/: App.qml  CMakeLists.txt  FileInput.qml  Screen01.ui.qml
content/MessageModule/: CMakeLists.txt  Ensemble.qml  Message.qml  Parameter.qml  SymbolEntity.qml  qmldir
content/Pages/: BasePage.qml  ByteOperationPage.qml  CMakeLists.txt  FileInputPage.qml  MessagePage.qml  qmldir
data-samples/: .encode  compress.decode  compress.encode  eng_text.txt  eng_text_2.txt  eng_text_encode.txt  large_text_ru.txt  ncurses.txt  rus_text_2.txt  test.txt  tmp.txt  tmp_res.txt
data-samples/results/: res.txt  res_decode.txt
imports/: CMakeLists.txt
imports/CompressionAlgorithms/: CMakeLists.txt  Constants.qml  GreenButton.qml  StandartText.qml  Style.qml  qmldir
imports/CompressionAlgorithms/designer/: plugin.metainfo
src/: Makefile  a.out  compress  header.h  import_qml_plugins.h  main.c  main.cpp  test.c  tree.txt
src/Controllers/: BytesOperationController.cpp  BytesOperationController.h  EnsembleController.cpp  EnsembleController.h  FileController.cpp  FileController.h  FilesInputController.cpp  FilesInputController.h  FilesListController.cpp  FilesListController.h  MessageController.cpp  MessageController.h
src/Entropy/: entropy.cpp  entropy.h  entropyAmounts.cpp  entropyIO.cpp
src/Huffmans-algorithm/: decode.c  decode.h  encode.c  encode.h  huff.c  huff.h
src/Models/: FileInputModel.cpp  FileInputModel.h  MessageModel.cpp  MessageModel.h
src/Services/: Services.h
src/Services/BytesOperation/: GaloisField.cpp  GaloisField.h  main.cpp
src/Services/Compression/: Compress.h  CompressManager.cpp  CompressManager.h  Huffman.cpp  Huffman.h
src/Services/Compression/Huffman/: consoleIO.cpp  consoleIO.h  debug.cpp  debug.h  decode.cpp  decode.h  encode.cpp  encode.h  huff.cpp  huff.h
src/Services/Entropy/: entropy.cpp  entropy.h
src/Utility/: Converter.cpp  Converter.h
tests/: func_test_Huffman_algorithm.sh  generate_fib_file.py  print_compression_infographic  print_compression_infographic.c
